# pokemon-pinyin

./: .pre-commit-config.yaml  .yamlfmt.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
data/: fixfile.json5
doc/: Pokemon.md
src/pkdicts/: main.py
src/pkdicts/configs/: __init__.py  abilities.py  characters.py  items.py  locations.py  moves.py  pokemon.py
src/pkdicts/core/: constant.py  dictionary.py  exporter.py  parse_page.py  pinyin.py  processor.py  types.py
